# Polarized_Disinformation

./: README.md  __init__.py  analysis.py  main.py  matrices.py  nash_equilibrium.py  parameters.py  pyproject.toml  setup.py  sirs_dynamics.py  social_optimum.py  visualization.py
configs/: default_params.yaml
examples/: baseline_scenario.py  high_polarization.py  policy_intervention.py
src/: __init__.py
src/polarized_disinformation/: __init__.py  analysis.py  hjb_solver.py  matrices.py  nash_equilibrium.py  parameters.py  sirs_dynamics.py  social_optimum.py  visualization.py
src/polarized_disinformation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
